# sol-coin-bet

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/contest-platform/: Cargo.toml
programs/contest-platform/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  state.rs
tests/: contest-platform.ts
